<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/ll_dialog_notice"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@mipmap/bg_dialog_notice"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingLeft="90dp"
                android:paddingRight="90dp"
                android:text="@string/sign_record"
                android:textColor="#0090ff"
                android:textSize="24dp" />

            <ImageView
                android:id="@+id/iv_close_notice"
                android:layout_width="66dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_close_notice" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_search_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="14dp"
                android:paddingRight="9dp">

                <EditText
                    android:id="@+id/et_search"
                    fontPath="fonts/Cartoon.ttf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_name_union_id"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="#B5B5B5"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_search"
                    fontPath="fonts/Cartoon.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bg_search_btn"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_sign_in"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/selector_sign_in" />

            <ImageView
                android:id="@+id/iv_sign_out"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/selector_sign_out" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_start_time"
                fontPath="fonts/Cartoon.ttf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_date_time"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/input_start_time"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/sign_record_stroke_color" />

            <TextView
                android:id="@+id/tv_end_time"
                fontPath="fonts/Cartoon.ttf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_date_time"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/input_end_time"
                android:textColor="@color/black"
                android:textSize="14dp" />

        </LinearLayout>

        <viroyal.com.base.widget.smart.SmartRecyclerViewLayout
            android:id="@+id/smartRecyclerViewLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1" />


    </LinearLayout>

</RelativeLayout>



